crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@81.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1,2,3]', 'lax $[*]');"
---
SelectStmt@0..47
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..33
        Sconst@24..33 "'[1,2,3]'"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AConst@35..45
        Sconst@35..45 "'lax $[*]'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

