crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@83.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1,2,3]', 'strict $[*].a', silent => true);"
---
SelectStmt@0..68
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..66
    FuncCall@7..66
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..33
        Sconst@24..33 "'[1,2,3]'"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AConst@35..50
        Sconst@35..50 "'strict $[*].a'"
      Ascii44@50..51 ","
      Whitespace@51..52 " "
      NamedArgExpr@52..66
        Ident@52..58 "silent"
        Whitespace@58..59 " "
        EqualsGreater@59..61 "=>"
        Whitespace@61..62 " "
        AConst@62..66
          TrueP@62..66 "true"
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

