crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@85.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[]', '$[last ? (exists(last))]');"
---
SelectStmt@0..58
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..56
    FuncCall@7..56
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..28
        Sconst@24..28 "'[]'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..56
        Sconst@30..56 "'$[last ? (exists(las ..."
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

