crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@86.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[]', 'strict $[last]');"
---
SelectStmt@0..48
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..46
    FuncCall@7..46
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..28
        Sconst@24..28 "'[]'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..46
        Sconst@30..46 "'strict $[last]'"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

