crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@88.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1]', '$[last]');"
---
SelectStmt@0..42
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..40
    FuncCall@7..40
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..29
        Sconst@24..29 "'[1]'"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      AConst@31..40
        Sconst@31..40 "'$[last]'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

