crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@89.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1,2,3]', '$[last]');"
---
SelectStmt@0..46
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..44
    FuncCall@7..44
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..33
        Sconst@24..33 "'[1,2,3]'"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AConst@35..44
        Sconst@35..44 "'$[last]'"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

