crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@90.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1,2,3]', '$[last - 1]');"
---
SelectStmt@0..50
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..48
    FuncCall@7..48
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..33
        Sconst@24..33 "'[1,2,3]'"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AConst@35..48
        Sconst@35..48 "'$[last - 1]'"
  Ascii41@48..49 ")"
  Ascii59@49..50 ";"

